--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <h4>Desenvolvedor: Gustavo</h4>
     <hr>
     <h5>Versão 1.0 - @copyright</h5>
+    <marquee>Finalizando projeto Git e Github</marquee>
 </body>
 </html>
